<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TerceraLey"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tercera"
        android:layout_gravity="center"
        android:textSize="25sp"
        android:textStyle="bold"
        android:layout_marginTop="30dp"/>


    <ImageView
        android:layout_width="200dp"
        android:layout_height="120dp"
        android:layout_gravity="center_horizontal"
        android:src="@drawable/tercera"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:gravity="center"
        android:text="@string/infotercera"
        android:textColor="@color/gris"
        android:layout_margin="10dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/masauno"
        android:layout_marginStart="10dp"
        android:textStyle="bold"
        android:layout_margin="5dp"/>
    <Spinner
        android:layout_width="200dp"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:text="@string/masados"
        android:textStyle="bold"
        android:layout_margin="5dp"/>
    <Spinner
        android:layout_width="200dp"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:text="@string/fuerzatres"
        android:textStyle="bold"
        android:layout_margin="5dp"/>
    <Spinner
        android:layout_width="200dp"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:text="Tipo de iteracion"
        android:textStyle="bold"
        android:layout_margin="5dp"/>

    <Spinner
        android:layout_width="200dp"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"/>

    <Button
        android:id="@+id/btninicio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnsimulacion"
        android:layout_gravity="center"
        android:backgroundTint="@color/blue"
        android:layout_margin="5dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:background="@color/gris"
        android:gravity="center"
        android:text="Aquí se mostrará la simulación"
        android:textColor="@color/white" />

</LinearLayout>