<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Menu"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="0dp">

        <ImageView
            android:id="@+id/btnHistorial"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_margin="13dp"
            android:src="@drawable/historial"
            android:contentDescription="Cerrar sesión"
            android:clickable="true"
            android:focusable="true"
            android:layout_marginTop="2000dp"/>

        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"/>

        <ImageView
            android:id="@+id/imgCerrarSesion"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_margin="13dp"
            android:src="@drawable/sesion"
            android:contentDescription="Cerrar sesión"
            android:clickable="true"
            android:focusable="true"/>
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bienvenido"
        android:layout_gravity="center"
        android:textSize="30sp"
        android:textStyle="bold"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:gravity="start"
        android:text="@string/subtitulomenu"
        android:textColor="@color/gris"
        android:textSize="15sp"
        android:layout_marginTop="5dp" />

    <ImageView
        android:layout_width="200dp"
        android:layout_height="120dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="25dp"
        android:src="@drawable/primera"/>

    <Button
        android:id="@+id/btnPrimera"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/primera"
        android:layout_gravity="center"
        android:backgroundTint="@color/blue"
        android:textColor="@color/white"/>

    <ImageView
        android:layout_width="200dp"
        android:layout_height="120dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="25dp"
        android:src="@drawable/segunda"/>

    <Button
        android:id="@+id/btnSegunda"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/segunda"
        android:layout_gravity="center"
        android:backgroundTint="@color/blue"
        android:textColor="@color/white"/>





</LinearLayout>